# YOD_Recoderd

./: .gitignore  CMakeLists.txt  LICENSE  LICENSES.md  README.md  sdkconfig  sdkconfig.old
3d_files/houder_recoder/: houder_yod_recoder v1.f3d
3d_files/patient/: base_robust v1.f3d  patient_side v1.f3d  rbust_top v1.f3d
3d_files/research_control/: new_research_control v1.f3d  robut_top_research v1.f3d  side_research_control_with_holes v1.f3d
code_clientSide/: audacity_concatenator.py  audacity_launcher.py  audio_gui.py  decoder_audiomodem.py  sound_intensity.py
code_esp32/: hardware.md  idf_component.yml  improvements.md
code_esp32/main/: CMakeLists.txt  idf_component.yml  main.cpp  use_case_template_1.md
code_esp32/main/headers/: Observer.hpp  RealTimeClock.hpp  WordCountQueueObserver.hpp  adcHandler.hpp  audioAnalyzer.hpp  audioAnalyzerController.hpp  audioModem.hpp  buttonBoundary.hpp  displayController.hpp  gpioController.hpp  hardware_config.hpp  listener.hpp  m5Scanner.hpp  m5ScannerController.hpp  menuController.hpp  pwmChannel.hpp  recoderAbstract.hpp  rsaEncryptor.hpp  speaker.hpp  storage.hpp  tascamBoundary.hpp  taskHandler.hpp
code_esp32/main/src/: RealTimeClock.cpp  WordCountQueueObserver.cpp  adcHandler.cpp  audioAnalyzer.cpp  audioAnalyzerController.cpp  audioModem.cpp  buttonBoundary.cpp  displayController.cpp  gpioController.cpp  m5Scanner.cpp  m5ScannerController.cpp  menuController.cpp  pwmChannel.cpp  speaker.cpp  storage.cpp  tascamBoundary.cpp  taskHandler.cpp
documentatie/: improvements.md  software_reference.md  use_case_template_2.md
test_code/: idf_component.yml  readme.txt  shared_main_config.cmake
test_code/Unit-test-aansturing-tascam-dr40x_and_protocol/: CMakeLists.txt  arduino_serial_monitor.ino  sdkconfig.defaults
test_code/Unit-test-aansturing-tascam-dr40x_and_protocol/main/: CMakeLists.txt  main.cpp
test_code/Unit-test-geluidsintensiteit/: test.py
test_code/Unit-test-qr-code/: CMakeLists.txt  sdkconfig
test_code/Unit-test-qr-code/main/: CMakeLists.txt  main.cpp
test_code/Unit_test_audiomodem_1_and_2/: CMakeLists.txt
test_code/Unit_test_audiomodem_1_and_2/main/: CMakeLists.txt  main.cpp
test_code/intergratie_test_spraak_stilte_ratio/: CMakeLists.txt  sdkconfig
test_code/intergratie_test_spraak_stilte_ratio/main/: CMakeLists.txt  main.cpp
test_code/uni_test_fft/: CMakeLists.txt
test_code/uni_test_fft/main/: CMakeLists.txt  main.cpp
